@@ -12,5 +12,3 @@ require "prototypes/rockchest"
 require "mapgen"
 require "data/recipe"
 require "data/tech-tree"
-
-table.insert(data.raw.character.character.crafting_categories, "crafting-handonly")
