@@ -14,9 +14,10 @@ Date: ???
     - Reduced lime and time required for Porus lime filters
     - Reduced time required for Sulfur air scrubbing
     - Reduced cost of mud landfill
-    - Hid settings from other mods that have no effect with Sea Block 
+    - Hid settings from other mods that have no effect with Sea Block
   Bugfixes:
     - Fixed crash when Train Construction Site is enabled
+    - Fixed Forage for cellulose fiber recipe not usable with mods that replace the default character
   Info:
     - Added incompatibility with A Sea Block Config. It has been merged in and should not be installed
 ---------------------------------------------------------------------------------------------------
